feat: add me endpoint to get current user info, update docs
